--- a/style.css
+++ b/style.css
@@ -15,3 +15,18 @@ body{
     background-color:rgb(95, 104, 104)
 }
 
+.roleta{
+    padding: 0;
+    margin: 0;
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #c7c692;
+    border: 10px solid #dbc086;
+    box-shadow: 40px 40px 6px rgba(0, 0, 0, 0.1);
+}
