--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 }
 
 body{
-    background-color: #f0f0f0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,14 +11,14 @@ body{
     height: 100vh;
     width: 100vw;
     margin: 0;
-    background-color:rgb(95, 104, 104)
+    background-color:rgb(142, 175, 175)
 }
 
 .roleta{
     padding: 0;
     margin: 0;
-    width: 400px;
-    height: 400px;
+    width: 370px;
+    height: 370px;
     border-radius: 50%;
     overflow: hidden;
     display: flex;
@@ -30,3 +29,12 @@ body{
     border: 10px solid #dbc086;
     box-shadow: 40px 40px 6px rgba(0, 0, 0, 0.1);
 }
+
+.container{
+    position: relative;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
