--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     font-family: Arial, sans-serif;
     padding: 0;
     margin: 0;
+    font-weight: bold;
 }
 
 body{
@@ -28,16 +29,26 @@ body{
     width: 370px;
     height: 370px;
     border-radius: 50%;
+    background-color: #c7c692;
+    border: 10px solid #dfd8d8;
+    box-shadow: 20px 40px 6px rgba(0, 0, 0, 0.1);
+
     overflow: hidden;
+    position: relative;
+
+}
+.item{
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    top: 50%;
+    left: 50%;
+    transform-origin: 0% 0%;
+    background-color: #c78cd3;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #c7c692;
-    border: 10px solid #dbc086;
-    box-shadow: 20px 40px 6px rgba(0, 0, 0, 0.1);
 }
-
 
 .spin{
     position: absolute;
