--- a/style.css
+++ b/style.css
@@ -8,9 +8,6 @@
 
 body{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     height: 100vh;
     width: 100vw;
     margin: 0;
@@ -30,18 +27,24 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: tomato;
+    width: 50%;
+    overflow: hidden;
 }
 
+.formulario{
+    border-left: 5px solid hsl(0, 0%, 100%);
+    width: 50%;
+    background-color: #4CAF50;
+}
 .roleta{
 
     width: 370px;
     height: 370px;
     border-radius: 50%;
     background-color: #c7c692;
-    border: 10px solid #dfd8d8;
-    box-shadow: 20px 40px 6px rgba(0, 0, 0, 0.1);
-
-    overflow: hidden;
+    border: 5px solid hsl(0, 0%, 100%);
+    box-shadow: 20px 40px 15px rgba(0, 0, 0, 0.466);
     position: relative;
 
 }
@@ -64,7 +67,7 @@ body{
     background-color: #ced6ce;
     border-color: rgb(148, 137, 137);
     border-radius: 100%;
-    box-shadow: 2px 4px 1px #999;
+    box-shadow: 2px 4px 1px rgba(0, 0, 0, 0.466);
 }
 .botao{
     position: absolute;
@@ -75,7 +78,7 @@ body{
     border-color: rgb(148, 137, 137);
     border: 2px solid;
     border-radius: 100%;
-    cursor: pointer;
-    box-shadow: 2px 4px 1px #949494;
-    bottom: -60px;
+    cursor:pointer;
+    box-shadow: 4px 5px 5px rgba(0, 0, 0, 0.466);
+    bottom: 1.5%;
 }
