--- a/style.css
+++ b/style.css
@@ -38,28 +38,43 @@ body{
     background-color: #4CAF50;
 }
 .roleta{
-
-    width: 370px;
-    height: 370px;
+    width: 400px;
+    height: 400px;
     border-radius: 50%;
     background-color: #c7c692;
     border: 5px solid hsl(0, 0%, 100%);
     box-shadow: 20px 40px 15px rgba(0, 0, 0, 0.466);
     position: relative;
-
+    overflow: hidden;
 }
 .item{
     position: absolute;
-    width: 50%;
-    height: 50%;
-    top: 50%;
-    left: 50%;
-    transform-origin: 0% 0%;
-    background-color: #c78cd3;
     display: flex;
+    text-align: center;
     align-items: center;
     justify-content: center;
+    text-align: left;
+    top: 50%;
+    left: 50%;
+    width: 50%;
+    height: 58%;
+    transform-origin: 0% 0%;
+    border: #e0e0e0 2px solid;
+
 }
+
+.texto-item{
+
+    color: rgb(211, 208, 208);
+    text-shadow: rgb(0, 0, 0) 2px 1px 6px;
+    position: relative;
+    width: 100%;
+    font-size: 20px;
+    white-space: nowrap;
+    margin-top: -90px;
+    
+}
+
 
 .spin{
     position: absolute;
@@ -76,7 +91,7 @@ body{
     background-color: #4CAF50;
     color: white;
     border-color: rgb(148, 137, 137);
-    border: 2px solid;
+    border: 4px solid;
     border-radius: 100%;
     cursor:pointer;
     box-shadow: 4px 5px 5px rgba(0, 0, 0, 0.466);
