--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: tomato;
+    background-color: #383a3d;
     width: 50%;
     overflow: hidden;
 }
@@ -35,14 +35,12 @@ body{
 .container_2{
     border-left: 5px solid hsl(0, 0%, 100%);
     width: 50%;
-    background-color: #4CAF50;
+    background-color: #e8f0ed;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
-
-
 
 
 /*---------------------------------------------------------*/
@@ -119,15 +117,15 @@ body{
 
 
 table {
-    border: 5px solid hsl(0, 0%, 100%);
+    border: 5px solid #0a0708;
     border-radius: 20px 20px 0px 0px;
     border-spacing: 0; 
     overflow: hidden; 
 
-    width: 60%;
-    height: 70%;
-    color: white;
-    box-shadow: 20px 20px 10px rgba(0, 0, 0, 0.466);
+    width: 100%;
+    height: 100%;
+    color: rgb(255, 255, 255);
+    box-shadow: 20px 67px 20px rgba(0, 0, 0, 0.466);
 }
 
 thead{
