--- a/style.css
+++ b/style.css
@@ -34,6 +34,16 @@ body{
     overflow: hidden;
 }
 
+.subcontainer_1{
+    width: 70%;
+    width: 60%;
+    background-color: #4CAF50;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+
 .container_2{
     border-left: 5px solid hsl(0, 0%, 100%);
     width: 50%;
@@ -42,6 +52,15 @@ body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
+}
+
+.subcontainer_2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 60%;
+    height: 70%;
 }
 
 
