--- a/style.css
+++ b/style.css
@@ -103,7 +103,15 @@ body{
     
 }
 
-.spin{
+.arrow{
+  width: 50px;
+  height: 50px;
+  background-color: #ce5b5b;
+  position: absolute;
+  top: 0;
+
+}
+.center-dot{
     position: absolute;
     padding: 20px 20px;
     background-color: #b9bdb9;
