--- a/style.css
+++ b/style.css
@@ -127,19 +127,18 @@ body{
 .center-dot{
     position: absolute;
     padding: 20px 20px;
-    background-color: #b9bdb9;
+    background-color: #65a4d8;
     border-radius: 100%;
-    border: 5px solid #e4dfe1   ;
+    border: 5px solid #000000   ;
     box-shadow: 5px 5px 1px rgba(0, 0, 0, 0.466);
 }
 .botao-girar{
     position: absolute;
     padding: 30px 20px;
     font-size: 16px;
-    background-color: #4CAF50;
+    background-color: #65a4d8;
     color: white;
-    border-color: rgb(148, 137, 137);
-    border: 4px solid;
+    border: 5px solid rgb(0, 0, 0);
     border-radius: 100%;
     cursor:pointer;
     box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.466);
