--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     padding: 0;
     margin: 0;
     font-weight:bolder;
-     box-sizing: border-box;
+    box-sizing: border-box;
 
 }
 
@@ -36,8 +36,7 @@ body{
 
 .subcontainer_1{
     width: 70%;
-    width: 60%;
-    background-color: #4CAF50;
+    width: 80%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -115,7 +114,7 @@ body{
 .arrow{
     width: 43px;   
     height: 43px;
-  position: absolute;
+    position: absolute;
     top: 5px;
     left: 8.5px;  
     background: #65a4d8;
@@ -154,6 +153,7 @@ table {
     border-spacing: 0; 
     overflow: hidden; 
 
+    font-size: 17px;
     width: 100%;
     height: 100%;
     color: rgb(255, 255, 255);
@@ -191,7 +191,8 @@ td{
     color: white;
     background-color: #1d1c1c;
     border-radius: 0px 0px 10px 10px;
-
+    
+    font-size: 17px;
     border: none;
 }
 
@@ -200,8 +201,9 @@ td{
     height: 100%;
     border-radius: 50px;
     color: #ffffff;
-    border: 2px solid #0a0708;
+    border: 5px solid #0a0708;
     cursor: pointer;
+    font-size: 17px;
     background-color: #ce5b5b;
 }
 
