--- a/style.css
+++ b/style.css
@@ -222,3 +222,47 @@ td{
         background-color: #77b126;
 }
 
+
+@media(max-width:1080px){
+
+    body{
+        flex-direction: column;
+        height: auto;
+    }
+    .container_2,.container_1{
+        width: 100%;
+        height: 100vh;
+    }
+    .roleta{
+        width: 400px;
+        height: 400px;
+    }
+    .subcontainer_2{
+        width: 85%;
+    }
+
+    .botao-girar{
+            bottom: -15%;
+    }
+}
+
+@media(max-width:720px){
+    .roleta{
+        width: 300px;
+        height: 300px;
+    }
+
+}
+
+
+@media(max-width:360px){
+
+
+    .botao-girar{
+    padding: 20px 10px;
+
+    }
+    .center-dot{
+    padding: 10px;
+    }
+}
