--- a/style.css
+++ b/style.css
@@ -235,6 +235,12 @@ td{
 
 
 @media(max-width:1080px){
+    #tabelaAcionador{
+    right: unset;
+    bottom: 20px;
+    font-size: 10px;
+    padding: 20px 15px 20px 15px;
+    }
 
     body{
         flex-direction: column;
