--- a/style.css
+++ b/style.css
@@ -75,6 +75,17 @@ body{
     border-radius: 1000%;
     border: 5px solid white;
 }
+
+#result{
+    position: absolute;
+    background-color: white;
+    padding: 20px;
+    font-size: 25px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bolder;
+    border-radius: 20px;
+    visibility: hidden;
+}
 /*-----------------------Roleta----------------------------------*/
 .roleta-wrapper {
     width: 35vw;
