--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ body{
     right: 20px;
     padding: 30px 15px 30px 15px;
     border-radius: 1000%;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border: 5px solid white;
 }
 
@@ -106,38 +107,39 @@ body{
     border-radius: 50%;
     background-color: #c7c692;
     border: 5px solid hsl(0, 0%, 0%);
-    box-shadow: 20px 40px 15px rgba(0, 0, 0, 0.466);
     position: relative;
     overflow: hidden;
 }
+
+/*
+    position: relative;
+    overflow: hidden;
+*/
 .item{
     position: absolute;
     display: flex;
-    text-align: center;
     align-items: center;
     justify-content: center;
-    text-align: left;
     top: 50%;
     left: 50%;
-    width: 50%;
-    height: 58%;
-    transform-origin: 0% 0%;
-    border: #000000 3px solid;
+    width: 55%;
+    height: 60%;
+    transform-origin: 1% 0%;
+    border: #000000 1px solid;
     overflow: hidden;
 
 }
 
 .texto-item{
-
     color: rgb(255, 250, 250);
     text-shadow: rgb(0, 0, 0) 2px 1px 6px;
     position: relative;
     width: 100%;
     background-color: #076dc0;
-    font-size: 21px;
-    margin-top: -90px;
+    font-size: clamp(14px, 2vw, 24px);
     
 }
+
 
 .arrow-border {
     width: 60px;   
