--- a/style.css
+++ b/style.css
@@ -37,9 +37,9 @@ body{
 }
 
 .subcontainer_1{
-    width: 70%;
-    width: 80%;
+    width: 80vw;
     display: flex;
+    background-color: #77b126;
     align-items: center;
     justify-content: center;
     position: relative;
@@ -91,8 +91,7 @@ body{
 .roleta-wrapper {
     width: 35vw;
     height: 35vw;
-      max-width: 470px; /* limite máximo */
-    max-height: 470px;
+
 
     border-radius: 50%;
     box-shadow: 20px 40px 15px rgba(0, 0, 0, 0.466); /* sombra fixa */
@@ -100,6 +99,10 @@ body{
     align-items: center;
     justify-content: center;
 }
+/*   
+    max-width: 470px; 
+    max-height: 470px;
+*/
 
 .roleta {
     width: 100%;
@@ -182,7 +185,8 @@ body{
     box-shadow: 8px 8px 4px rgba(0, 0, 0, 0.466);
     bottom: -10%;
 }.botao-girar:hover{
-    background-color: #076dc0;
+    background-color: #3a83be;
+    border-color: #65a4d8;
 }
 
 /*-------------------------Formulario--------------------------------*/
@@ -280,31 +284,26 @@ td{
         visibility: visible;
         display: flex;
     }
+
     .roleta-wrapper{
-        width: 400px;
-        height: 400px;
+        width: 50vw;
+        height: 50vw;
     }
+
+
+    .botao-girar{
+        bottom: -15%;
+    }
+}
+
+@media(max-width:600px){
     .subcontainer_2{
         width: 85%;
     }
-
-    .botao-girar{
-            bottom: -15%;
-    }
-}
-
-@media(max-width:720px){
     .roleta-wrapper{
-        width: 300px;
-        height: 300px;
+        width: 80vw;
+        height: 80vw;
     }
-
-}
-
-
-@media(max-width:360px){
-
-
     .botao-girar{
     padding: 20px 10px;
 
