--- a/style.css
+++ b/style.css
@@ -10,10 +10,15 @@
 
 body{
     display: flex;
+    flex-direction: column;
     height: 100vh;
     width: 100vw;
-    margin: 0;
-    background-color:rgb(142, 175, 175)
+}
+
+main{
+    display: flex;
+    width: 100%;
+    height: 100%;
 }
 
 .titulo{
@@ -278,6 +283,10 @@ td{
     body{
         flex-direction: column;
         height: auto;
+    }
+    main{
+        flex-direction: column;
+
     }
     .container_2,.container_1{
         width: 100%;
