--- a/style.css
+++ b/style.css
@@ -20,18 +20,29 @@ main{
     width: 100%;
     height: 100%;
 }
-
-.titulo{
-    top: 0;
+.titulo-container {
     position: absolute;
-    padding: 10px;
+    top: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 90%;
     text-align: center;
-    width: 100%;
-    margin-bottom: 20px;
-    font-size: 40px;
-    color: rgb(255, 255, 255);
+    pointer-events: none;
+}
+
+.titulo {
+    margin: 0;
+    font-size: clamp(10px, 2vw, 15px);
+    color: #fff;
     text-shadow: rgb(0, 0, 0) 4px 4px 1px;
 }
+
+.marca {
+    display: block;
+    font-size: 40px;
+    margin-top: 4px;
+}
+
 .container_1{
     position: relative;
     display: flex;
