--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ main{
     border-radius: 1000%;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border: 5px solid white;
+        box-shadow: 7px 7px 3px rgba(0, 0, 0, 0.466);
 }#tabelaAcionador:hover{
     background-color: #920606;
     border-color: #0a0708;
@@ -170,6 +171,7 @@ main{
     top: -8px;
     clip-path: polygon(50% 100%, 0 0, 100% 0);
     background: rgb(255, 255, 255); 
+    box-shadow: 20px 40px 1px rgba(163, 12, 12, 0.466);
 }
 
 .arrow{
@@ -181,6 +183,18 @@ main{
     background: #65a4d8;
     clip-path: polygon(50% 100%, 0 0, 100% 0);
     box-shadow: 5px 5px 5px rgba(0,0,0,0.5); 
+}
+.arrow-shadow{
+    filter: blur(10px);
+    opacity: 0.5;
+    width: 50px;   
+    height: 50px;
+    position: absolute;
+    top: 3px;
+    margin-left: 8px;
+    clip-path: polygon(50% 100%, 0 0, 100% 0);
+    background: rgb(0, 0, 0); 
+    box-shadow: 20px 40px 1px rgba(163, 12, 12, 0.466);
 }
 /*  #4CAF50;   */
 
