--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ main{
     margin: 0;
     font-size: clamp(10px, 2vw, 15px);
     color: #fff;
-    text-shadow: rgb(0, 0, 0) 4px 4px 1px;
+    text-shadow: rgb(0, 0, 0) 2.5px 2.5px 1px;
 }
 
 .marca {
@@ -48,7 +48,7 @@ main{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #383a3d;
+    background-color: #75787c;
     width: 100%;
 }
 
@@ -61,7 +61,7 @@ main{
 }
 
 .container_2{
-    border-left: 5px solid hsl(0, 0%, 100%);
+    border-left: 5px solid hsl(0, 0%, 0%);
     width: 50%;
     background-color: #e8f0ed;
 
@@ -314,6 +314,7 @@ td{
 
     }
     .container_2,.container_1{
+        border: none;
         width: 100%;
         height: 100vh;
         visibility: visible;
