--- a/style.css
+++ b/style.css
@@ -87,7 +87,8 @@ main{
     background-color:#ff0000;
     color:white;
     right: 20px;
-    padding: 30px 20px;
+    width: 90px;
+    height: 90px;
     border-radius: 100%;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border: 5px solid white;
@@ -204,7 +205,8 @@ main{
 }
 .botao-girar{
     position: absolute;
-    padding: 30px 20px;
+    width: 90px;
+    height: 90px;
     font-size: 16px;
     background-color: #65a4d8;
     color: white;
@@ -293,11 +295,16 @@ td{
 
 /*---------------------------Mobile----------------------------------*/
 @media(max-width:1080px){
+    .botao-girar{
+        width: 80px;
+        height: 80px;
+    }
     #tabelaAcionador{
     right: unset;
     bottom: 20px;
     font-size: 10px;
-    padding: 20px 15px;
+    width: 80px;
+    height: 80px;
     }
 
     body{
