--- a/style.css
+++ b/style.css
@@ -285,7 +285,7 @@ td{
     .container_2,.container_1{
         border: none;
         width: 100%;
-        height: 100vh;
+        height: 100svh;
         visibility: visible;
         display: flex;
     }
